syntax = "proto3";

option java_multiple_files = true;

package notsystemserver.grpc;

message Init_Server_Args {
}

message uint128_m {
  uint64 low = 1;
  uint64 high = 2;
}

message TR_m {
  uint128_m address = 1;
  uint64 coins = 2;
}

message UTxO_m {
  uint128_m Tx_id = 1;
  uint128_m address = 2;
}

message TX_m {
  uint128_m Tx_id = 1;
  uint64 timestamp = 5;
  repeated UTxO_m utxos = 6;
  repeated TR_m trs = 7;
}

message Send_Coins_req {
    uint128_m sender = 1;
    uint128_m receiver = 2;
    uint64 coins = 3;
}


message Response_status {
  bool success = 1;
  string response = 2;
}

message UTxO_list {
  repeated UTxO_m uxtos = 1;
}

message Transaction_list {
  repeated TX_m transactions = 1;
}

message get_transactions_m {
  bool specific_address = 1;
  uint128_m address = 2;
  string lock_path = 3;
}

service SystemServer {
  rpc init_Server(Init_Server_Args) returns (Response_status);
  rpc Submit_Transaction(TX_m) returns (Response_status);
  rpc Transfer_coins(Send_Coins_req) returns (Response_status);
  rpc get_utxos(uint128_m) returns (UTxO_list);
  rpc get_transactions(uint128_m) returns (Transaction_list);

  rpc Publish_Transaction(TX_m) returns (Response_status);
  rpc get_transaction_by_txid(uint128_m) returns (TX_m);

}
